// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniversitySearch arrow down has no effect at end 1`] = `
.c2 {
  box-sizing: border-box;
}

.c4 {
  position: absolute;
  width: 300px;
  max-height: 400px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  border: solid 1px #ccc;
  border-radius: 3px;
  background-color: white;
  padding: 3px;
  box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 10%);
  margin-top: 2px;
}

.c5 {
  padding: 0.5rem;
  background-color: transparent;
  border: none;
  text-align: left;
  border-radius: 3px;
  cursor: pointer;
}

.c5[aria-selected="true"],
.c5:active {
  background-color: #ccc;
}

.c5:hover {
  background-color: #ddd;
}

.c3 {
  color: inherit;
  font-size: 0.95rem;
  font-family: inherit;
  line-height: 1rem;
  margin-top: 0.25rem;
  display: block;
  width: -moz-fit-content;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border-radius: 0.375rem;
  border-color: rgb(209 213 219 / 1);
  box-shadow: 0 0 #0000,0 1px 2px 0 rgb(0 0 0 / 0.05);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #fff;
  border-width: 1px;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  margin: 0;
}

.c3:focus {
  border-color: rgb(99 102 241 / 1);
  outline: 2px solid transparent;
  outline-offset: 2px;
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgb(99,102,241) 0px 0px 0px 1px,rgba(0,0,0,0.05) 0px 1px 2px 0px;
}

.c1 {
  padding: 4px 0px;
  display: block;
  font-size: 0.95rem;
  line-height: 1rem;
  font-weight: 500;
  color: rgb(55 65 81 / 1);
}

.c0 {
  padding: 0 0 1rem 0;
}

.c6 {
  display: block;
  float: left;
  padding: 4px 0px;
  font-size: 0.75rem;
  line-height: 1rem;
  font-weight: 400;
  color: rgb(55 65 81 / 1);
}

<div>
  <fieldset
    class="c0"
  >
    <label
      class="c1"
      for="university-search"
    >
      Search Australian Universities
    </label>
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="university-search-list"
      class="c2"
      role="combobox"
    >
      <input
        aria-activedescendant="university-search-option-2"
        aria-autocomplete="list"
        aria-controls="typeahead-list"
        class="c3"
        id="university-search"
        placeholder="Search..."
        role="textbox"
        value="University of Southern Queensland"
      />
      <div
        class="c4"
        id="university-search-list"
        role="listbox"
      >
        <div
          aria-selected="false"
          class="c5"
          id="university-search-option-0"
          role="option"
        >
          University of Sydney
        </div>
        <div
          aria-selected="false"
          class="c5"
          id="university-search-option-1"
          role="option"
        >
          University of South Australia
        </div>
        <div
          aria-selected="true"
          class="c5"
          id="university-search-option-2"
          role="option"
        >
          <b />
          University of Southern Queensland
          <b />
        </div>
      </div>
    </div>
    <legend
      class="c6"
    >
      Run code on local to bypass hipolabs.com CORS policy
    </legend>
  </fieldset>
</div>
`;

exports[`UniversitySearch arrow up selects first result 1`] = `
.c2 {
  box-sizing: border-box;
}

.c4 {
  position: absolute;
  width: 300px;
  max-height: 400px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  border: solid 1px #ccc;
  border-radius: 3px;
  background-color: white;
  padding: 3px;
  box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 10%);
  margin-top: 2px;
}

.c5 {
  padding: 0.5rem;
  background-color: transparent;
  border: none;
  text-align: left;
  border-radius: 3px;
  cursor: pointer;
}

.c5[aria-selected="true"],
.c5:active {
  background-color: #ccc;
}

.c5:hover {
  background-color: #ddd;
}

.c3 {
  color: inherit;
  font-size: 0.95rem;
  font-family: inherit;
  line-height: 1rem;
  margin-top: 0.25rem;
  display: block;
  width: -moz-fit-content;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border-radius: 0.375rem;
  border-color: rgb(209 213 219 / 1);
  box-shadow: 0 0 #0000,0 1px 2px 0 rgb(0 0 0 / 0.05);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #fff;
  border-width: 1px;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  margin: 0;
}

.c3:focus {
  border-color: rgb(99 102 241 / 1);
  outline: 2px solid transparent;
  outline-offset: 2px;
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgb(99,102,241) 0px 0px 0px 1px,rgba(0,0,0,0.05) 0px 1px 2px 0px;
}

.c1 {
  padding: 4px 0px;
  display: block;
  font-size: 0.95rem;
  line-height: 1rem;
  font-weight: 500;
  color: rgb(55 65 81 / 1);
}

.c0 {
  padding: 0 0 1rem 0;
}

.c6 {
  display: block;
  float: left;
  padding: 4px 0px;
  font-size: 0.75rem;
  line-height: 1rem;
  font-weight: 400;
  color: rgb(55 65 81 / 1);
}

<div>
  <fieldset
    class="c0"
  >
    <label
      class="c1"
      for="university-search"
    >
      Search Australian Universities
    </label>
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="university-search-list"
      class="c2"
      role="combobox"
    >
      <input
        aria-activedescendant="university-search-option-0"
        aria-autocomplete="list"
        aria-controls="typeahead-list"
        class="c3"
        id="university-search"
        placeholder="Search..."
        role="textbox"
        value="University of Sydney"
      />
      <div
        class="c4"
        id="university-search-list"
        role="listbox"
      >
        <div
          aria-selected="true"
          class="c5"
          id="university-search-option-0"
          role="option"
        >
          <b />
          University of Sydney
          <b />
        </div>
        <div
          aria-selected="false"
          class="c5"
          id="university-search-option-1"
          role="option"
        >
          University of South Australia
        </div>
        <div
          aria-selected="false"
          class="c5"
          id="university-search-option-2"
          role="option"
        >
          University of Southern Queensland
        </div>
      </div>
    </div>
    <legend
      class="c6"
    >
      Run code on local to bypass hipolabs.com CORS policy
    </legend>
  </fieldset>
</div>
`;

exports[`UniversitySearch navigates on key press 'ArrowDown' 1`] = `
.c2 {
  box-sizing: border-box;
}

.c4 {
  position: absolute;
  width: 300px;
  max-height: 400px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  border: solid 1px #ccc;
  border-radius: 3px;
  background-color: white;
  padding: 3px;
  box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 10%);
  margin-top: 2px;
}

.c5 {
  padding: 0.5rem;
  background-color: transparent;
  border: none;
  text-align: left;
  border-radius: 3px;
  cursor: pointer;
}

.c5[aria-selected="true"],
.c5:active {
  background-color: #ccc;
}

.c5:hover {
  background-color: #ddd;
}

.c3 {
  color: inherit;
  font-size: 0.95rem;
  font-family: inherit;
  line-height: 1rem;
  margin-top: 0.25rem;
  display: block;
  width: -moz-fit-content;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border-radius: 0.375rem;
  border-color: rgb(209 213 219 / 1);
  box-shadow: 0 0 #0000,0 1px 2px 0 rgb(0 0 0 / 0.05);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #fff;
  border-width: 1px;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  margin: 0;
}

.c3:focus {
  border-color: rgb(99 102 241 / 1);
  outline: 2px solid transparent;
  outline-offset: 2px;
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgb(99,102,241) 0px 0px 0px 1px,rgba(0,0,0,0.05) 0px 1px 2px 0px;
}

.c1 {
  padding: 4px 0px;
  display: block;
  font-size: 0.95rem;
  line-height: 1rem;
  font-weight: 500;
  color: rgb(55 65 81 / 1);
}

.c0 {
  padding: 0 0 1rem 0;
}

.c6 {
  display: block;
  float: left;
  padding: 4px 0px;
  font-size: 0.75rem;
  line-height: 1rem;
  font-weight: 400;
  color: rgb(55 65 81 / 1);
}

<div>
  <fieldset
    class="c0"
  >
    <label
      class="c1"
      for="university-search"
    >
      Search Australian Universities
    </label>
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="university-search-list"
      class="c2"
      role="combobox"
    >
      <input
        aria-activedescendant="university-search-option-2"
        aria-autocomplete="list"
        aria-controls="typeahead-list"
        class="c3"
        id="university-search"
        placeholder="Search..."
        role="textbox"
        value="University of Southern Queensland"
      />
      <div
        class="c4"
        id="university-search-list"
        role="listbox"
      >
        <div
          aria-selected="false"
          class="c5"
          id="university-search-option-0"
          role="option"
        >
          University of Sydney
        </div>
        <div
          aria-selected="false"
          class="c5"
          id="university-search-option-1"
          role="option"
        >
          University of South Australia
        </div>
        <div
          aria-selected="true"
          class="c5"
          id="university-search-option-2"
          role="option"
        >
          <b />
          University of Southern Queensland
          <b />
        </div>
      </div>
    </div>
    <legend
      class="c6"
    >
      Run code on local to bypass hipolabs.com CORS policy
    </legend>
  </fieldset>
</div>
`;

exports[`UniversitySearch navigates on key press 'ArrowUp' 1`] = `
.c2 {
  box-sizing: border-box;
}

.c4 {
  position: absolute;
  width: 300px;
  max-height: 400px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  border: solid 1px #ccc;
  border-radius: 3px;
  background-color: white;
  padding: 3px;
  box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 10%);
  margin-top: 2px;
}

.c5 {
  padding: 0.5rem;
  background-color: transparent;
  border: none;
  text-align: left;
  border-radius: 3px;
  cursor: pointer;
}

.c5[aria-selected="true"],
.c5:active {
  background-color: #ccc;
}

.c5:hover {
  background-color: #ddd;
}

.c3 {
  color: inherit;
  font-size: 0.95rem;
  font-family: inherit;
  line-height: 1rem;
  margin-top: 0.25rem;
  display: block;
  width: -moz-fit-content;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border-radius: 0.375rem;
  border-color: rgb(209 213 219 / 1);
  box-shadow: 0 0 #0000,0 1px 2px 0 rgb(0 0 0 / 0.05);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #fff;
  border-width: 1px;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  margin: 0;
}

.c3:focus {
  border-color: rgb(99 102 241 / 1);
  outline: 2px solid transparent;
  outline-offset: 2px;
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgb(99,102,241) 0px 0px 0px 1px,rgba(0,0,0,0.05) 0px 1px 2px 0px;
}

.c1 {
  padding: 4px 0px;
  display: block;
  font-size: 0.95rem;
  line-height: 1rem;
  font-weight: 500;
  color: rgb(55 65 81 / 1);
}

.c0 {
  padding: 0 0 1rem 0;
}

.c6 {
  display: block;
  float: left;
  padding: 4px 0px;
  font-size: 0.75rem;
  line-height: 1rem;
  font-weight: 400;
  color: rgb(55 65 81 / 1);
}

<div>
  <fieldset
    class="c0"
  >
    <label
      class="c1"
      for="university-search"
    >
      Search Australian Universities
    </label>
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="university-search-list"
      class="c2"
      role="combobox"
    >
      <input
        aria-activedescendant="university-search-option-0"
        aria-autocomplete="list"
        aria-controls="typeahead-list"
        class="c3"
        id="university-search"
        placeholder="Search..."
        role="textbox"
        value="University of Sydney"
      />
      <div
        class="c4"
        id="university-search-list"
        role="listbox"
      >
        <div
          aria-selected="true"
          class="c5"
          id="university-search-option-0"
          role="option"
        >
          <b />
          University of Sydney
          <b />
        </div>
        <div
          aria-selected="false"
          class="c5"
          id="university-search-option-1"
          role="option"
        >
          University of South Australia
        </div>
        <div
          aria-selected="false"
          class="c5"
          id="university-search-option-2"
          role="option"
        >
          University of Southern Queensland
        </div>
      </div>
    </div>
    <legend
      class="c6"
    >
      Run code on local to bypass hipolabs.com CORS policy
    </legend>
  </fieldset>
</div>
`;

exports[`UniversitySearch no response renders correctly 1`] = `
.c2 {
  box-sizing: border-box;
}

.c4 {
  position: absolute;
  width: 300px;
  max-height: 400px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  border: solid 1px #ccc;
  border-radius: 3px;
  background-color: white;
  padding: 3px;
  box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 10%);
  margin-top: 2px;
}

.c5 {
  padding: 0.5rem;
  background-color: transparent;
  border: none;
  text-align: left;
  border-radius: 3px;
  cursor: pointer;
}

.c5[aria-selected="true"],
.c5:active {
  background-color: #ccc;
}

.c5:hover {
  background-color: #ddd;
}

.c3 {
  color: inherit;
  font-size: 0.95rem;
  font-family: inherit;
  line-height: 1rem;
  margin-top: 0.25rem;
  display: block;
  width: -moz-fit-content;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border-radius: 0.375rem;
  border-color: rgb(209 213 219 / 1);
  box-shadow: 0 0 #0000,0 1px 2px 0 rgb(0 0 0 / 0.05);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #fff;
  border-width: 1px;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  margin: 0;
}

.c3:focus {
  border-color: rgb(99 102 241 / 1);
  outline: 2px solid transparent;
  outline-offset: 2px;
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgb(99,102,241) 0px 0px 0px 1px,rgba(0,0,0,0.05) 0px 1px 2px 0px;
}

.c1 {
  padding: 4px 0px;
  display: block;
  font-size: 0.95rem;
  line-height: 1rem;
  font-weight: 500;
  color: rgb(55 65 81 / 1);
}

.c0 {
  padding: 0 0 1rem 0;
}

.c6 {
  display: block;
  float: left;
  padding: 4px 0px;
  font-size: 0.75rem;
  line-height: 1rem;
  font-weight: 400;
  color: rgb(55 65 81 / 1);
}

<div>
  <fieldset
    class="c0"
  >
    <label
      class="c1"
      for="university-search"
    >
      Search Australian Universities
    </label>
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="university-search-list"
      class="c2"
      role="combobox"
    >
      <input
        aria-activedescendant="university-search-option--1"
        aria-autocomplete="list"
        aria-controls="typeahead-list"
        class="c3"
        id="university-search"
        placeholder="Search..."
        role="textbox"
        value="University o"
      />
      <div
        class="c4"
        id="university-search-list"
        role="listbox"
      >
        <div
          class="c5"
        >
          No results
        </div>
      </div>
    </div>
    <legend
      class="c6"
    >
      Run code on local to bypass hipolabs.com CORS policy
    </legend>
  </fieldset>
</div>
`;

exports[`UniversitySearch renders and matches snapshot 1`] = `
.c2 {
  box-sizing: border-box;
}

.c3 {
  color: inherit;
  font-size: 0.95rem;
  font-family: inherit;
  line-height: 1rem;
  margin-top: 0.25rem;
  display: block;
  width: -moz-fit-content;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border-radius: 0.375rem;
  border-color: rgb(209 213 219 / 1);
  box-shadow: 0 0 #0000,0 1px 2px 0 rgb(0 0 0 / 0.05);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #fff;
  border-width: 1px;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  margin: 0;
}

.c3:focus {
  border-color: rgb(99 102 241 / 1);
  outline: 2px solid transparent;
  outline-offset: 2px;
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgb(99,102,241) 0px 0px 0px 1px,rgba(0,0,0,0.05) 0px 1px 2px 0px;
}

.c1 {
  padding: 4px 0px;
  display: block;
  font-size: 0.95rem;
  line-height: 1rem;
  font-weight: 500;
  color: rgb(55 65 81 / 1);
}

.c0 {
  padding: 0 0 1rem 0;
}

.c4 {
  display: block;
  float: left;
  padding: 4px 0px;
  font-size: 0.75rem;
  line-height: 1rem;
  font-weight: 400;
  color: rgb(55 65 81 / 1);
}

<div>
  <fieldset
    class="c0"
  >
    <label
      class="c1"
      for="university-search"
    >
      Search Australian Universities
    </label>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="university-search-list"
      class="c2"
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="typeahead-list"
        class="c3"
        id="university-search"
        placeholder="Search..."
        role="textbox"
        value=""
      />
    </div>
    <legend
      class="c4"
    >
      Run code on local to bypass hipolabs.com CORS policy
    </legend>
  </fieldset>
</div>
`;

exports[`UniversitySearch typing less than 3 chars does nothing 1`] = `
.c2 {
  box-sizing: border-box;
}

.c3 {
  color: inherit;
  font-size: 0.95rem;
  font-family: inherit;
  line-height: 1rem;
  margin-top: 0.25rem;
  display: block;
  width: -moz-fit-content;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border-radius: 0.375rem;
  border-color: rgb(209 213 219 / 1);
  box-shadow: 0 0 #0000,0 1px 2px 0 rgb(0 0 0 / 0.05);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #fff;
  border-width: 1px;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  margin: 0;
}

.c3:focus {
  border-color: rgb(99 102 241 / 1);
  outline: 2px solid transparent;
  outline-offset: 2px;
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgb(99,102,241) 0px 0px 0px 1px,rgba(0,0,0,0.05) 0px 1px 2px 0px;
}

.c1 {
  padding: 4px 0px;
  display: block;
  font-size: 0.95rem;
  line-height: 1rem;
  font-weight: 500;
  color: rgb(55 65 81 / 1);
}

.c0 {
  padding: 0 0 1rem 0;
}

.c4 {
  display: block;
  float: left;
  padding: 4px 0px;
  font-size: 0.75rem;
  line-height: 1rem;
  font-weight: 400;
  color: rgb(55 65 81 / 1);
}

<div>
  <fieldset
    class="c0"
  >
    <label
      class="c1"
      for="university-search"
    >
      Search Australian Universities
    </label>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="university-search-list"
      class="c2"
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="typeahead-list"
        class="c3"
        id="university-search"
        placeholder="Search..."
        role="textbox"
        value="ab"
      />
    </div>
    <legend
      class="c4"
    >
      Run code on local to bypass hipolabs.com CORS policy
    </legend>
  </fieldset>
</div>
`;

exports[`UniversitySearch valid query triggers result query 1`] = `
.c2 {
  box-sizing: border-box;
}

.c4 {
  position: absolute;
  width: 300px;
  max-height: 400px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  border: solid 1px #ccc;
  border-radius: 3px;
  background-color: white;
  padding: 3px;
  box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 10%);
  margin-top: 2px;
}

.c5 {
  padding: 0.5rem;
  background-color: transparent;
  border: none;
  text-align: left;
  border-radius: 3px;
  cursor: pointer;
}

.c5[aria-selected="true"],
.c5:active {
  background-color: #ccc;
}

.c5:hover {
  background-color: #ddd;
}

.c3 {
  color: inherit;
  font-size: 0.95rem;
  font-family: inherit;
  line-height: 1rem;
  margin-top: 0.25rem;
  display: block;
  width: -moz-fit-content;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border-radius: 0.375rem;
  border-color: rgb(209 213 219 / 1);
  box-shadow: 0 0 #0000,0 1px 2px 0 rgb(0 0 0 / 0.05);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #fff;
  border-width: 1px;
  padding-top: 0.5rem;
  padding-right: 0.75rem;
  padding-bottom: 0.5rem;
  padding-left: 0.75rem;
  margin: 0;
}

.c3:focus {
  border-color: rgb(99 102 241 / 1);
  outline: 2px solid transparent;
  outline-offset: 2px;
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgb(99,102,241) 0px 0px 0px 1px,rgba(0,0,0,0.05) 0px 1px 2px 0px;
}

.c1 {
  padding: 4px 0px;
  display: block;
  font-size: 0.95rem;
  line-height: 1rem;
  font-weight: 500;
  color: rgb(55 65 81 / 1);
}

.c0 {
  padding: 0 0 1rem 0;
}

.c6 {
  display: block;
  float: left;
  padding: 4px 0px;
  font-size: 0.75rem;
  line-height: 1rem;
  font-weight: 400;
  color: rgb(55 65 81 / 1);
}

<div>
  <fieldset
    class="c0"
  >
    <label
      class="c1"
      for="university-search"
    >
      Search Australian Universities
    </label>
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="university-search-list"
      class="c2"
      role="combobox"
    >
      <input
        aria-activedescendant="university-search-option--1"
        aria-autocomplete="list"
        aria-controls="typeahead-list"
        class="c3"
        id="university-search"
        placeholder="Search..."
        role="textbox"
        value="University of"
      />
      <div
        class="c4"
        id="university-search-list"
        role="listbox"
      >
        <div
          aria-selected="false"
          class="c5"
          id="university-search-option-0"
          role="option"
        >
          <b />
          University of
          <b>
             Sydney
          </b>
        </div>
        <div
          aria-selected="false"
          class="c5"
          id="university-search-option-1"
          role="option"
        >
          <b />
          University of
          <b>
             South Australia
          </b>
        </div>
        <div
          aria-selected="false"
          class="c5"
          id="university-search-option-2"
          role="option"
        >
          <b />
          University of
          <b>
             Southern Queensland
          </b>
        </div>
      </div>
    </div>
    <legend
      class="c6"
    >
      Run code on local to bypass hipolabs.com CORS policy
    </legend>
  </fieldset>
</div>
`;
